test/syc/good/shl_assign.c
/*
 * Shift left assign
 */

int a, b;

int shl_assign(void)
{
	a <<= b;
}
